libs/wingc/src/lsp/snapshots/completions/hide_parent_symbols_defined_later.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: this
  kind: 6
  detail: "inflight (): void"
  documentation:
    kind: markdown
    value: "```wing\npreflight this: inflight (): void\n```"
  sortText: bb|this
- label: x
  kind: 6
  detail: num
  documentation:
    kind: markdown
    value: "```wing\npreflight x: num\n```"
  sortText: bb|x
- label: assert
  kind: 3
  detail: "(condition: bool, message: str?): void"
  documentation:
    kind: markdown
    value: "```wing\nassert: (condition: bool, message: str?): void\n```\n---\nAsserts that a condition is true\n### Parameters\n- `condition` — `bool` — The condition to assert\n- `message` — `str?` — The message to log if the condition is false"
  sortText: cc|assert
  insertText: assert($1)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: importInflight
  kind: 3
  detail: "preflight (file: str, options: ImportInflightOptions): any"
  documentation:
    kind: markdown
    value: "```wing\nimportInflight: preflight (file: str, options: ImportInflightOptions): any\n```\n---\nExplicitly apply qualifications to a preflight object used in the current method/function\n### Parameters\n- `file` — `str` — Path to extern file to create inflight. Relative to the current wing file.\n- `...options` — `ImportInflightOptions` — \n\t\t\t\t\t\t\tTODO\n\t\t\t\t\t\t\t\n  \n  - `export?` — `str?` — Name of exported function.\n  - `lifts?` — `Map<LiftDeclaration>?` — Mapping of available symbols to a lift declaration."
  sortText: cc|importInflight
  insertText: importInflight($1)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: lift
  kind: 3
  detail: "inflight (preflightObject: IResource, qualifications: Array<str>): void"
  documentation:
    kind: markdown
    value: "```wing\nlift: inflight (preflightObject: IResource, qualifications: Array<str>): void\n```\n---\nExplicitly apply qualifications to a preflight object used in the current method/function\n### Parameters\n- `preflightObject` — `IResource` — The preflight object to qualify\n- `qualifications` — `Array<str>` — \n\t\t\t\t\t\t\tThe qualifications to apply to the preflight object.\n\n\t\t\t\t\t\t\tThis is an array of strings denoting members of the object that are accessed in the current method/function.\n\n\t\t\t\t\t\t\tFor example, if the method accesses the `push` and `pop` members of a `cloud.Queue` object, the qualifications should be `[\"push\", \"pop\"]`."
  sortText: cc|lift
  insertText: lift($1)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: log
  kind: 3
  detail: "(message: str): void"
  documentation:
    kind: markdown
    value: "```wing\nlog: (message: str): void\n```\n---\nLogs a message\n### Parameters\n- `message` — `str` — The message to log"
  sortText: cc|log
  insertText: log($1)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: nodeof
  kind: 3
  detail: "preflight (construct: IConstruct): Node"
  documentation:
    kind: markdown
    value: "```wing\nnodeof: preflight (construct: IConstruct): Node\n```\n---\nObtain the tree node of a preflight resource.\n### Parameters\n- `construct` — `IConstruct` — The construct to obtain the tree node of"
  sortText: cc|nodeof
  insertText: nodeof($1)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: unsafeCast
  kind: 3
  detail: "(value: any): any"
  documentation:
    kind: markdown
    value: "```wing\nunsafeCast: (value: any): any\n```\n---\nCasts a value into a different type. This is unsafe and can cause runtime errors\n### Parameters\n- `value` — `any` — The value to cast into a different type"
  sortText: cc|unsafeCast
  insertText: unsafeCast($1)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: Json
  kind: 14
  sortText: kl|zyJson
- label: MutJson
  kind: 14
  sortText: kl|zyMutJson
- label: bool
  kind: 14
  sortText: kl|zybool
- label: datetime
  kind: 14
  sortText: kl|zydatetime
- label: duration
  kind: 14
  sortText: kl|zyduration
- label: num
  kind: 14
  sortText: kl|zynum
- label: regex
  kind: 14
  sortText: kl|zyregex
- label: str
  kind: 14
  sortText: kl|zystr
- label: Array<T>
  kind: 14
  sortText: kl|zzArray
  insertText: Array<$1>
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest
- label: Map<T>
  kind: 14
  sortText: kl|zzMap
  insertText: Map<$1>
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest
- label: MutArray<T>
  kind: 14
  sortText: kl|zzMutArray
  insertText: MutArray<$1>
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest
- label: MutMap<T>
  kind: 14
  sortText: kl|zzMutMap
  insertText: MutMap<$1>
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest
- label: MutSet<T>
  kind: 14
  sortText: kl|zzMutSet
  insertText: MutSet<$1>
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest
- label: Set<T>
  kind: 14
  sortText: kl|zzSet
  insertText: Set<$1>
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest

