libs/wingc/src/lsp/snapshots/completions/struct_show_values.snap
---
source: libs/wingc/src/lsp/completions.rs
---
- label: this
  kind: 6
  detail: Construct
  documentation:
    kind: markdown
    value: "```wing\npreflight this: Construct\nclass Construct impl IConstruct\n```\n---\nRepresents the building block of the construct graph.\n\n### Remarks\nAll constructs besides the root construct must be created within the scope of\nanother construct.\n\n### Fields\n- `node` — `Node` — The tree node.\n### Methods\n- `isConstruct` — `preflight (x: any): bool` — Checks if `x` is a construct.\n- `toString` — `preflight (): str` — Returns a string representation of this construct."
  sortText: bb|this
- label: x
  kind: 6
  detail: num
  documentation:
    kind: markdown
    value: "```wing\npreflight x: num\n```"
  sortText: bb|x
- label: importInflight
  kind: 3
  detail: "preflight (file: str, options: ImportInflightOptions): any"
  documentation:
    kind: markdown
    value: "```wing\nimportInflight: preflight (file: str, options: ImportInflightOptions): any\n```\n---\nExplicitly apply qualifications to a preflight object used in the current method/function\n### Parameters\n- `file` — `str` — Path to extern file to create inflight. Relative to the current wing file.\n- `...options` — `ImportInflightOptions` — \n\t\t\t\t\t\t\tTODO\n\t\t\t\t\t\t\t\n  \n  - `export?` — `str?` — Name of exported function.\n  - `lifts?` — `Map<LiftDeclaration>?`"
  sortText: cc|importInflight
  insertText: importInflight($1)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: nodeof
  kind: 3
  detail: "preflight (construct: IConstruct): Node"
  documentation:
    kind: markdown
    value: "```wing\nnodeof: preflight (construct: IConstruct): Node\n```\n---\nObtain the tree node of a preflight resource.\n### Parameters\n- `construct` — `IConstruct` — The construct to obtain the tree node of"
  sortText: cc|nodeof
  insertText: nodeof($1)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: unsafeCast
  kind: 3
  detail: "(value: any): any"
  documentation:
    kind: markdown
    value: "```wing\nunsafeCast: (value: any): any\n```\n---\nCasts a value into a different type. This is unsafe and can cause runtime errors\n### Parameters\n- `value` — `any` — The value to cast into a different type"
  sortText: cc|unsafeCast
  insertText: unsafeCast($1)
  insertTextFormat: 2
  command:
    title: triggerParameterHints
    command: editor.action.triggerParameterHints
- label: S
  kind: 22
  documentation:
    kind: markdown
    value: "```wing\nstruct S\n```\n---\n### Fields\n- `a` — `num`\n- `b` — `num`"
  sortText: hh|S
- label: Json
  kind: 14
  sortText: kl|zyJson
- label: MutJson
  kind: 14
  sortText: kl|zyMutJson
- label: bool
  kind: 14
  sortText: kl|zybool
- label: datetime
  kind: 14
  sortText: kl|zydatetime
- label: duration
  kind: 14
  sortText: kl|zyduration
- label: num
  kind: 14
  sortText: kl|zynum
- label: regex
  kind: 14
  sortText: kl|zyregex
- label: str
  kind: 14
  sortText: kl|zystr
- label: Array<T>
  kind: 14
  sortText: kl|zzArray
  insertText: Array<$1>
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest
- label: Map<T>
  kind: 14
  sortText: kl|zzMap
  insertText: Map<$1>
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest
- label: MutArray<T>
  kind: 14
  sortText: kl|zzMutArray
  insertText: MutArray<$1>
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest
- label: MutMap<T>
  kind: 14
  sortText: kl|zzMutMap
  insertText: MutMap<$1>
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest
- label: MutSet<T>
  kind: 14
  sortText: kl|zzMutSet
  insertText: MutSet<$1>
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest
- label: Set<T>
  kind: 14
  sortText: kl|zzSet
  insertText: Set<$1>
  insertTextFormat: 2
  command:
    title: triggerCompletion
    command: editor.action.triggerSuggest
- label: "inflight () => {}"
  kind: 15
  sortText: ll|zzinflight
  filterText: inflight
  insertText: "inflight ($1) => {$0}"
  insertTextFormat: 2

